[metadata]
name = storage-sim
description = Discrete Event Simulator for Energy Storage Evaluation
long_description = REASDME.rst

[options]
install_requires =
    helics[cli]
    OpenDSSDirect.py[extras] >= 0.5.0
    networkx
    importlib_resources
    kivy
    kivymd
    tomli
    requests
    kivy-garden
    scipy
    matplotlib ~= 3.7.2
packages =
    find_namespace:
    
setup_requires =
    setuptools_scm

[options.package_data]
ssim.federates =
    *.json
ssim.ui =
    libs/garden/garden.matplotlib/*
ssim.ui.kivy =
    *.kv
ssim.ui.kivy.images =
    *.png
    *.jpg
    *.jpeg
ssim.ui.kivy.fonts =
    *.ttf
    *.txt

[options.entry_points]
console_scripts =
    storage-federate = ssim.federates.storage:run
    grid-federate = ssim.federates.opendss:run
    reliability-federate = ssim.federates.reliability:run
    ems-federate = ssim.federates.ems:run
    logger-federate = ssim.federates.logger:run
    metrics-federate = ssim.federates.metrics:run
    ssim = ssim.ui.kivy.ssimapp:main
